--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
   persistent_bottom_nav_bar: ^5.0.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
