--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,10 @@ dependencies:
   provider: ^6.0.5
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
-  persistent_bottom_nav_bar: ^5.0.2
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +59,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
